<resources>
    <string name="app_name">RentStuff</string>
    <string name="registration_title">Реєстрація</string>
    <string name="registration_name">Ім`я</string>
    <string name="registration_phone">Телефон</string>
    <string name="registration_button"><u>Зареєструватися</u></string>
    <string name="registration_email">Пошта</string>
    <string name="registration_password">Пароль</string>

    <string name="auth_button"><u>Авторизуватись</u></string>
    <string name="registration_surname">Прізвище</string>
    <string name="photo">Фото</string>
    <string name="registration_landlord">Орендодавець</string>
    <string name="announcement_name">Назва:</string>
    <string name="announcement_category">Категорія:</string>
    <string name="announcement_btn">Орендувати</string>
    <string name="registration_renting">Орендатор</string>

    <string name="view_profile_title">Перегляд профілю</string>
    <string name="view_profile_btn">Редагувати</string>
    <string name="rented">Орендовано</string>
    <string name="sorting">Сортування</string>
    <string name="filtration">Фільтраці</string>
    <string name="view_shop_title">Перегляд магазину</string>
    <string name="view_shop_name">Назва</string>
    <string name="view_shop_phone">Телефон</string>
    <string name="view_shop_email">Email</string>
    <string name="view_shop_address">Адреса</string>
    <string name="view_shop_longitude">Довгота</string>
    <string name="view_shop_latitude">Широта</string>
    <string name="view_shop_description">Опис</string>
    <string name="view_shop_btn">Речі цього магазину</string>

    <string name="map">Мапа</string>
    <string name="all_ann_itm">Всі оголошення</string>
    <string name="profile">Профіль</string>

    <string name="view_full_info_announcement">Повна інформація про річ</string>
    <string name="view_full_info_name">Назва</string>
    <string name="view_full_info_price">Ціна</string>
    <string name="view_full_info_category">Категорія</string>
    <string name="view_full_info_description">Опис</string>

    <string name="view_info_shop_title">Інформація про магазин</string>
    <string name="view_info_shop_name">Назва</string>
    <string name="view_info_shop_phone">Телефон</string>
    <string name="view_info_shop_email">Email</string>
    <string name="view_info_shop_address">Адреса</string>
    <string name="view_info_shop_longitude">Довгота</string>
    <string name="view_info_shop_latitude">Широта</string>
    <string name="view_info_shop_description">Опис</string>


    <string name="signup_title">Авторизація</string>
    <string name="singup_button">Увійти</string>
    <string name="title_activity_shelter">ShelterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_shelter_title">Створення притулку</string>
    <string name="shelter_name">Назва притулку</string>
    <string name="shelter_longitude">Довгота</string>
    <string name="shelter_latitude">Широта</string>
    <string name="shelter_url">Посилання на сайт</string>
    <string name="shelter_create">Створити</string>
    <string name="shelter_title">Дані про ваш притулок</string>
    <string name="shelter_change">Змінити</string>
    <string name="title_activity_shelter_maps">Map</string>
    <string name="title_activity_user_shelter">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pets">Тварини</string>
    <string name="shelter">О притулку</string>
    <string name="settings">Налаштування</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shelter_main_title">Притулок</string>
    <string name="pets_main_title">Тварини</string>
    <string-array name="filter">
        <item>-</item>
        <item>Техніка для дома</item>
        <item>Фото та відео</item>
        <item>Інструменти</item>
        <item>Музичні інструменти</item>
        <item>Спортивні тренажери</item>
        <item>Спорт та відпочинок</item>
        <item>Устаткування для заходів</item>
        <item>Електроніка</item>
        <item>Ігри та консолі</item>
    </string-array>
    <string-array name="sorting">
        <item>-</item>
        <item>Вартність ↑</item>
        <item>Вартність ↓</item>
    </string-array>
    <string name="title_activity_shop_maps">ShopMapsActivity</string>
</resources>