<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3DBDA"
    tools:context=".ViewShopActivity">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"

        android:fontFamily="@font/rubik_light"
        android:text="@string/view_shop_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:text="@string/view_shop_phone"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="299dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:text="@string/view_shop_address"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="423dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:text="@string/view_shop_latitude"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="486dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:text="@string/view_shop_description"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="576dp" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poiret_one"
        android:text="EMAIL"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="417dp" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poiret_one"
        android:text="NAME"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="240dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:text="@string/view_shop_email"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="361dp" />

    <TextView
        android:id="@+id/textViewSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poiret_one"
        android:text="SURNAME"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="299dp" />

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poiret_one"
        android:text="PHONE"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="358dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:text="@string/view_shop_name"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="237dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#C7B9B7"
        android:fontFamily="@font/rubik_light"
        android:text="@string/view_profile_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>