<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3DBDA"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/rubik_light"
        android:text="@string/registration_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:backgroundTint="#C7B9B7"
        android:onClick="registration"
        android:text="@string/registration_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.813" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="29dp"
        android:background="#F2F0F5"
        android:ems="10"
        android:fontFamily="@font/poiret_one"
        android:hint="@string/registration_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="#F2F0F5"
        android:ems="10"
        android:fontFamily="@font/poiret_one"
        android:hint="@string/registration_phone"
        android:inputType="phone"
        android:padding="5dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.163" />

    <EditText
        android:id="@+id/editTextTextPersonSurname"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="29dp"
        android:background="#F2F0F5"
        android:ems="10"
        android:fontFamily="@font/poiret_one"
        android:hint="@string/registration_surname"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="#F2F0F5"
        android:ems="10"
        android:fontFamily="@font/poiret_one"
        android:hint="@string/registration_name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="29dp"
        android:background="#F2F0F5"
        android:ems="10"
        android:fontFamily="@font/poiret_one"
        android:hint="@string/registration_email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="168dp"
        android:layout_height="102dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845">

        <RadioButton
            android:id="@+id/important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="165dp"
            android:drawablePadding="20dp"
            android:fontFamily="@font/poiret_one"
            android:onClick="onRadioButtonClicked"
            android:text="@string/registration_renting"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentfield"
            app:layout_constraintVertical_bias="1.0" />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="165dp"
            android:layout_height="47dp"
            android:drawablePadding="2dp"
            android:fontFamily="@font/poiret_one"
            android:onClick="onRadioButtonClicked"
            android:text="@string/registration_landlord"

            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentfield"
            app:layout_constraintVertical_bias="0.933" />


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>